--- a/src/3-Work/work.css
+++ b/src/3-Work/work.css
@@ -37,40 +37,35 @@
 .port-description {
     margin-top: 2.75rem;
     font-size: 1.85rem;
+    transform: scale(0.8);
+    animation: portDescScale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
 }
-#port-slide1,
-#port-slide2 {
+@keyframes portDescScale {
+    100% {transform: scale(1)}
+}
+.port-description span {
     display: inline-block;
-    overflow: hidden;
-    white-space: nowrap;
-    /* border: 1px solid rebeccapurple; */
-}
-#port-slide1 {
     opacity: 0;
-    animation: showup 2s ease 2s forwards;
+    filter: blur(4px);
+    padding-right: 1px;
+} 
+.port-description span:nth-child(1) {animation: descFadeIn 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(2) {animation: descFadeIn 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(3) {animation: descFadeIn 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(4) {animation: descFadeIn 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(5) {animation: descFadeIn 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(6) {animation: descFadeIn 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(7) {animation: descFadeIn 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(8) {animation: descFadeIn 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0); color: #08fdd8; text-decoration: underline; cursor: pointer}
+.port-description span:nth-child(9) {animation: descFadeIn 0.8s 1.9s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(10) {animation: descFadeIn 0.8s 2s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(11) {animation: descFadeIn 0.8s 2.1s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(12) {animation: descFadeIn 0.8s 2.2s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(13) {animation: descFadeIn 0.8s 2.3s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+@keyframes descFadeIn {
+    100% {opacity: 1; filter: blur(0)}
 }
-#port-slide2 {
-    width: 0;
-    animation: reveal 2.5s ease 2s forwards;
-}
-#port-contact-slide {
-    margin-left: -340px;
-    animation: slidein 2.5s ease 2s forwards;
-}
-@keyframes showup {
-    0% {opacity: 0}
-    100% {opacity: 1}
-}
-@keyframes slidein {
-    0% {margin-left: -800px}
-    50% {margin-left: -800px}
-    100% {margin-left: 0px}
-}
-@keyframes reveal {
-    0% {opacity: 0; width: 0px}
-    50% {opacity: 1; width: 0px}
-    100% {width: 380px}
-}
+
 #port-contact-slide span {
     color: #08fdd8;
     text-decoration: underline;
