--- a/src/4-Algorithms/algorithms.css
+++ b/src/4-Algorithms/algorithms.css
@@ -62,28 +62,102 @@
 }
 
 .algo-wrapper {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    width: 90%;
+    gap: 5rem 0;
+    margin-top: 3.85rem;
 }
 .algo-item {
+    padding: 0 1rem;
+    width: 92.5%;
+    margin: 0 auto;
+    box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%);
 }
-.algo-item p {
+#algoJavascript::before {
+    content: "";
+    display: block;
+    height: 2px;
+    margin-left: -1rem;
+    width: calc(100% + 2rem);
+    transition: all .7s ease;
+    background-color: orange
 }
-.algo-item h1 {
+#algoRuby::before {
+    content: "";
+    display: block;
+    height: 2px;
+    margin-left: -1rem;
+    width: calc(100% + 2rem);
+    transition: all .7s ease;
+    background-color: #FD2155
+}
+#algoJavascriptRuby::before {
+    content: "";
+    display: block;
+    height: 2px;
+    margin-left: -1rem;
+    width: calc(100% + 2rem);
+    transition: all .7s ease;
+    background: linear-gradient(to right,orange, #FD2155);
+}
+.algo-title-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.algo-item p:first-child {
+    display: block;
+    font-size: 14px;
+    padding: 1.5rem 2rem 2rem;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    border: 0;
+    margin-top: 1rem;
+}
+#algoJavascript p:first-child {
+    color: orange;
+}
+#algoRuby p:first-child {
+    color: #FD2155;
+}
+#algoJavascriptRuby p:first-child {
+    color: orange;
+}
+#algoJavascriptRuby p:first-child span:first-of-type {
+    color: #aaa;
+}
+#algoJavascriptRuby p:first-child span:last-of-type {
+    color: #FD2155;
+}
+.algo-item p:last-child {
+    display: block;
+    font-size: 14px;
+    padding: 1.5rem 2rem 2rem;
+    color: gray;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    border: 0;
+    margin-top: 1rem;
 }
 .algo-iframe-wrapper {
-}
-.algo-iframe-wrapper iframe {
-}
-
-
-
-
-/* .algo-iframe-wrapper {
     position: relative;
-    width: 90%;
     overflow: hidden;
-    padding-top: 56.25%;
+    width: 100%;
+    height: 30rem;
+    margin-bottom: 1rem;
 }
 .algo-iframe-wrapper iframe {
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: .5rem;
+}
+.algo-iframe-wrapper img {
     position: absolute;
     top: 0;
     left: 0;
@@ -92,4 +166,5 @@
     width: 100%;
     height: 100%;
     border-radius: .5rem;
-} */
+    background-color: black;
+}
