--- a/src/2-Skills/skills.css
+++ b/src/2-Skills/skills.css
@@ -137,7 +137,7 @@
     width: 0;
     height: 1px;
     box-shadow: rgba(15, 15, 15, .65) 0px 2px 4px;
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255), rgba(255, 255, 255, 0));
     opacity: .8;
     border-radius: 1rem;
     margin: 7.5rem 0 5rem;
