--- a/src/3-Work/work.css
+++ b/src/3-Work/work.css
@@ -15,7 +15,7 @@
     width: 100%;
 }
 @keyframes portFade {
-    100% {opacity: 1;}
+    100% {opacity: 1}
 }
 .port-header {
     position: relative;
@@ -49,19 +49,19 @@
     filter: blur(2px);
     padding-right: 1px;
 } 
-.port-description span:nth-child(1) {animation: descFadeIn 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0)}
-.port-description span:nth-child(2) {animation: descFadeIn 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0)}
-.port-description span:nth-child(3) {animation: descFadeIn 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0)}
-.port-description span:nth-child(4) {animation: descFadeIn 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0)}
-.port-description span:nth-child(5) {animation: descFadeIn 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0)}
-.port-description span:nth-child(6) {animation: descFadeIn 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0)}
-.port-description span:nth-child(7) {animation: descFadeIn 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0)}
-.port-description span:nth-child(8) {animation: descFadeIn 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0); color: #08fdd8; text-decoration: underline; cursor: pointer}
-.port-description span:nth-child(9) {animation: descFadeIn 0.8s 1.9s forwards cubic-bezier(0.11, 0, 0.5, 0)}
-.port-description span:nth-child(10) {animation: descFadeIn 0.8s 2s forwards cubic-bezier(0.11, 0, 0.5, 0)}
-.port-description span:nth-child(11) {animation: descFadeIn 0.8s 2.1s forwards cubic-bezier(0.11, 0, 0.5, 0)}
-.port-description span:nth-child(12) {animation: descFadeIn 0.8s 2.2s forwards cubic-bezier(0.11, 0, 0.5, 0)}
-.port-description span:nth-child(13) {animation: descFadeIn 0.8s 2.3s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(1) {animation: descFadeIn 0.8s .7s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(2) {animation: descFadeIn 0.8s .8s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(3) {animation: descFadeIn 0.8s .9s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(4) {animation: descFadeIn 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(5) {animation: descFadeIn 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(6) {animation: descFadeIn 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(7) {animation: descFadeIn 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(8) {animation: descFadeIn 0.8s 2.3s forwards cubic-bezier(0.11, 0, 0.5, 0); color: #08fdd8; text-decoration: underline; cursor: pointer}
+.port-description span:nth-child(9) {animation: descFadeIn 0.8s 2.4s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(10) {animation: descFadeIn 0.8s 2.5s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(11) {animation: descFadeIn 0.8s 2.6s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(12) {animation: descFadeIn 0.8s 2.7s forwards cubic-bezier(0.11, 0, 0.5, 0)}
+.port-description span:nth-child(13) {animation: descFadeIn 0.8s 2.8s forwards cubic-bezier(0.11, 0, 0.5, 0)}
 @keyframes descFadeIn {
     100% {opacity: 1; filter: blur(0)}
 }
