--- a/src/4-Algorithms/algorithms.css
+++ b/src/4-Algorithms/algorithms.css
@@ -71,7 +71,7 @@
     padding: 0 1rem;
     width: 92.5%;
     margin: 0 auto;
-    background-color: #1b1b1b;
+    background-color: #1a1a1a;
     box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%);
     margin-top: 10rem;
     margin-bottom: -10rem;
