--- a/src/6-Contact/contact.css
+++ b/src/6-Contact/contact.css
@@ -1,7 +1,7 @@
 .contact-container {
-    padding-left: 20rem;
-    height: 100vh;
-    font-size: 5rem;
-    padding-top: 5rem;
-    text-align: center;
+    padding: 2.5rem 0 5rem 20rem;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
