--- a/src/6-Contact/contact.css
+++ b/src/6-Contact/contact.css
@@ -6,22 +6,88 @@
     justify-content: space-between;
 }
 .contact-left-box {
+    width: 47.5%;
 }
-.contact-header {
+.contact-title {
+    position: relative;
+    font-size: 6.5rem;
+    line-height: 8.75rem;
+    width: 90%;
+    padding-left: 5%;
+    color: #08fdd8;
+}
+.contact-title span {
+    display: inline-block;
+    transition: color .35s ease;
+}
+@keyframes contactBounce {
+    from {transform: scale3d(1, 1, 1)}
+    30% {transform: scale3d(1.25, 0.75, 1)}
+    40% {transform: scale3d(0.75, 1.2, 1)}
+    50% {transform: scale3d(1.15, 0.85, 1)}
+    65% {transform: scale3d(.95, 1.05, 1)}
+    75% {transform: scale3d(1.05, .95, 1)}
+    to {transform: scale3d(1, 1, 1)}
+}
+.contact-title span:hover {
+    animation: contactBounce 1s ease-in-out forwards;
 }
 .contact-message {
+    font-family: "Open Sans",sans-serif;
+    display: block;
+    width: 90%;
+    padding-left: 5%;
+    min-width: 320px;
+    font-size: 1.6rem;
+    line-height: 1.5;
 }
 .contact-form {
+    width: 90%;
+    margin-left: 5%;
+    border: 1px solid red;
+    min-height: 20rem;
 }
 .contact-aside {
+    width: 90%;
+    margin-left: 5%;
+    border: 1px solid red;
+    min-height: 5rem;
 }
 
 
 .contact-right-box {
+    position: relative;
     height: 100vh;
-    width: 40vw;
+    width: 52.5%;
+}
+@keyframes mapCoverBye {
+    100% {width: 0}
+}
+.contact-right-cover {
+    position: absolute;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1f1f1f;
+    animation: mapCoverBye .85s ease .5s forwards;
+}
+@keyframes mapBoxPop {
+    100% {margin-top: 0; opacity: 1}
 }
 .map-popup {
+    position: absolute;
+    background: rgba(0,0,0,0.875);
+    top: 4rem;
+    left: 4rem;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 1.6;
+    z-index: 999999;
+    padding: 20px;
+    color: #fff;
+    margin-top: 5rem;
+    animation: mapBoxPop 1s ease 1.25s forwards;
+    opacity: 0;
 }
 .map-wrapper {
     height: 100%;
