--- a/src/5-Blogs/blogs.css
+++ b/src/5-Blogs/blogs.css
@@ -85,9 +85,6 @@
     opacity: 1;
     z-index: 2;
 }
-/* #blog-item-1:checked ~ .blog-cards #blog-slide-1 img, #blog-item-2:checked ~ .blog-cards #blog-slide-2 img, #blog-item-3:checked ~ .blog-cards #blog-slide-3 img {
-    box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
-} */
 .blog-content {
     height: 100%;
     width: 100%;
@@ -110,6 +107,14 @@
     color: #121212;
     text-shadow: 1.5px 1.5px 1px gray;
     padding: .5rem 0 1rem;
+}
+.blog-title a {
+    color: #121212;
+    text-decoration: none;
+}
+.blog-title a:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 .blog-start-wrap {
     width: calc(100% + 4rem);
