--- a/src/1-About/about.css
+++ b/src/1-About/about.css
@@ -277,3 +277,75 @@
     left: -1rem;
     bottom: -2.5rem;
 }
+
+/* RESPONSIVE */
+
+@media (max-width: 1400px) {
+    .about-left-title {
+        font-size: 7rem;
+        line-height: 8.25rem;
+    }
+}
+@media (max-width: 1300px) {
+    .about-left-title {
+        font-size: 6.5rem;
+        line-height: 7.5rem;
+    }
+    .about-right-title {
+        font-size: 5rem;
+        line-height: 12rem;
+    }
+    .about-left-box {
+        padding-left: 3rem;
+    }
+    .about-right-box {
+        padding-right: 3.25rem;
+    }
+}
+@media (max-width: 1200px) {
+    .about-left-title {
+        font-size: 6rem;
+        line-height: 7rem;
+    }
+    .about-right-title {
+        font-size: 4.5rem;
+        line-height: 11.5rem;
+    }
+    .about-right-description {
+        font-size: 1.55rem;
+    }
+    .about-contact-button {
+        font-size: 14px;
+        line-height: 48.5px;
+        height: 48.5px;
+        width: 180px;
+    }
+    .about-resume-box {
+        gap: 1rem;
+    }
+    .about-resume-title {
+        font-size: 1.85rem;
+    }
+    .about-resume-pdf {
+        height: 4.75rem;
+        width: 4.75rem;
+    }
+    .about-resume-googleDocs {
+        height: 4.6rem;
+        width: 4.6rem;
+    }
+    .about-resume-buttons-wrapper {
+        gap: .25rem;
+    }
+}
+@media (max-width: 1100px) {
+    .about-left-title {
+        font-size: 5.5rem;
+        line-height: 6.5rem;
+    }
+}
+@media (max-width: 1050px) {
+    .about-container {
+        padding: 2.5rem 0 5rem 20rem;
+    }
+}
