--- a/src/1-About/about.css
+++ b/src/1-About/about.css
@@ -279,7 +279,6 @@
 }
 
 /* RESPONSIVE */
-
 @media (max-width: 1400px) {
     .about-left-title {
         font-size: 7rem;
@@ -300,6 +299,15 @@
     }
     .about-right-box {
         padding-right: 3.25rem;
+    }
+}
+@media (max-width: 1200px) {
+    .about-container {
+        padding: 2.5rem 0 5rem 18rem;
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 }
 @media (max-width: 1200px) {
@@ -337,15 +345,10 @@
     .about-resume-buttons-wrapper {
         gap: .25rem;
     }
+    .about-left-description {
+        font-size: 1.5rem;
+    }
 }
 @media (max-width: 1100px) {
-    .about-left-title {
-        font-size: 5.5rem;
-        line-height: 6.5rem;
-    }
-}
-@media (max-width: 1050px) {
-    .about-container {
-        padding: 2.5rem 0 5rem 20rem;
-    }
+    
 }
