about section fully responsive

--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -201,6 +201,10 @@
     }
 }
 @media (max-width: 480px) {
+    .navbar-top img {
+        height: 10rem;
+        width: 10rem;
+    }
     .navbar-toggle-button {
         top: 1rem;
         right: 1rem;
