--- a/src/1-About/about.css
+++ b/src/1-About/about.css
@@ -294,20 +294,10 @@
         font-size: 5rem;
         line-height: 12rem;
     }
-    .about-left-box {
-        padding-left: 3rem;
-    }
-    .about-right-box {
-        padding-right: 3.25rem;
-    }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1250px) {
     .about-container {
-        padding: 2.5rem 0 5rem 18rem;
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        padding: 2.5rem 0 5rem 17rem;
     }
 }
 @media (max-width: 1200px) {
@@ -350,5 +340,165 @@
     }
 }
 @media (max-width: 1100px) {
-    
+    .about-container {
+        padding: 2.5rem 0 5rem 2rem;
+    }
+    .about-right-box {
+        padding-right: 5rem;
+    }
+}
+@media (max-width: 1000px) {
+    .about-container {
+        padding: 2.5rem 0 5rem 0;
+    }
+    .about-right-box {
+        padding-right: 3rem;
+    }
+}
+@media (max-width: 950px) {
+    .about-left-title {
+        font-size: 6.5rem;
+        line-height: 7.5rem;
+    }
+    .about-right-title {
+        font-size: 5rem;
+        line-height: 12rem;
+    }
+    .about-container {
+        flex-direction: column;
+    }
+    .about-left-box {
+        padding-left: 0rem;
+        margin: 5rem 0;
+    }
+    .about-right-box {
+        padding-right: 0rem;
+        width: 40rem;
+        margin: 0 0 2.5rem;
+    }
+    .about-right-description {
+        font-size: 1.8rem;
+    }
+}
+@media (max-width: 650px) {
+    .about-left-title {
+        font-size: 5rem;
+        line-height: 6.25rem;
+    }
+    .about-left-description {
+        font-size: 1.5rem;
+    }
+    .about-right-title {
+        font-size: 4rem;
+        line-height: 10rem;
+    }
+    .about-right-description {
+        font-size: 1.4rem;
+    }
+    .about-contact-button {
+        font-size: 12px;
+        line-height: 45px;
+        height: 45px;
+        width: 165px;
+    }
+    .about-resume-title {
+        font-size: 1.65rem;
+    }
+    .about-resume-pdf {
+        height: 4.35rem;
+        width: 4.35rem;
+    }
+    .about-resume-googleDocs {
+        height: 4.25rem;
+        width: 4.25rem;
+    }
+    .about-resume-buttons-wrapper {
+        gap: 0;
+    }
+    .about-right-title:before {
+        margin-top: -3rem;
+    }
+    .about-right-title:after {
+        bottom: -3.25rem;
+    }
+}
+@media (max-width: 480px) {
+    .about-left-title:before {
+        margin-top: -3.35rem;
+    }
+    .about-left-title {
+        font-size: 4.125rem;
+        line-height: 5.125rem;
+    }
+    .about-left-title:after {
+        margin-top: 1.25rem;
+        margin-left: .75rem;
+    }
+    .about-left-description {
+        font-size: 1.35rem;
+        letter-spacing: 2px;
+    }
+    .about-right-box {
+        width: 30rem;
+    }
+    .about-contact-button {
+        font-size: 12px;
+        line-height: 42px;
+        letter-spacing: 2px;
+        height: 43px;
+        width: 140px;
+    }
+    .about-resume-box {
+        margin-left: 2rem;
+        gap: 1rem;
+    }
+    .about-resume-title {
+        font-size: 1.5rem;
+    }
+    .about-resume-pdf {
+        height: 4rem;
+        width: 4rem;
+        margin-top: .2rem;
+    }
+    .about-resume-googleDocs {
+        height: 3.75rem;
+        width: 3.75rem;
+    }
+}
+@media (max-width: 390px) {
+    .about-left-title:before {
+        margin-top: -3.125rem;
+    }
+    .about-left-title {
+        font-size: 3.75rem;
+        line-height: 4.5rem;
+    }
+    .about-left-title:after {
+        margin-top: 1.35rem;
+        margin-left: .65rem;
+    }
+    .about-left-description {
+        font-size: 1.25rem;
+    }
+    .about-contact-button {
+        font-size: 12px;
+        line-height: 38px;
+        height: 39px;
+        width: 125px;
+    }
+    .about-resume-box {
+        margin-left: 1.65rem;
+        gap: .5rem;
+    }
+    .about-resume-title {
+        font-size: 1.35rem;
+    }
+    .about-resume-pdf {
+        height: 3.65rem;
+        width: 3.65rem;
+    }
+    .about-resume-googleDocs {
+        height: 3.4rem;
+        width: 3.4rem;
+    }
 }
