--- a/src/2-Skills/skills.css
+++ b/src/2-Skills/skills.css
@@ -37,11 +37,11 @@
     position: relative;
     display: flex;
     font-family: monospace;
-    font-size: .8rem;
+    font-size: 1.5rem;
     line-height: 2;
     width: 62.5vw;
     height: 2.5rem;
-    /* border: 1px solid rebeccapurple; */
+    border: 1px solid rebeccapurple;
 }
 .skills-box:first-of-type {
     margin-top: 7.5rem;
